--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
     </div>
   </div><!-- .container -->
 
+  <footer>
+    <div class="footer">
+      <header>
+        <h2>jQuery Hot Cold Game</h2>
+      </header>
+    </div>
+  </footer>
+
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="app.js"></script>
